@@ -4,7 +4,7 @@
  *
  * This file contains code for the ChanServ CLEAR USERS function.
  *
- * $Id: clear_users.c 2849 2005-10-12 09:49:01Z pfish $
+ * $Id: clear_users.c 2851 2005-10-12 10:16:33Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/clear_users", FALSE, _modinit, _moddeinit,
-	"$Id: clear_users.c 2849 2005-10-12 09:49:01Z pfish $",
+	"$Id: clear_users.c 2851 2005-10-12 10:16:33Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -72,7 +72,7 @@ static void cs_cmd_clear_users(char *origin, char *channel)
 
 		/* don't kick the user who requested the masskick */
 
-		if ((!irccasecmp(cu->user->nick, origin)) || (!irccasecmp(chansvs.nick, cu->user->nick)))
+		if (!irccasecmp(cu->user->nick, origin) || cu->user->server == me.me)
 			continue;
 
 		kick(chansvs.nick, c->name, cu->user->nick, reason);
